Implement reset and change password, delete user by admin

--- a/backend/src/views/resetPassword.handlebars
+++ b/backend/src/views/resetPassword.handlebars
@@ -1,46 +1,57 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reset Password</title>
-    <style>
-      *{text-decoration: none;} .container{ margin: 0 auto; max-width: 500px;
-      width: 100%; } .btn-link{ display: inline-block; padding: 10px 20px;
-      background-color: #007bff; color: #fff !important; text-decoration: none;
-      border-radius: 5px; } img{ width: 30px; border-radius: 50%;}
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>{{subject}}</h1>
-      <hr />
-      <p>Hello {{name}},</p>
-      <p>We received a request to reset your password.<br />If you did
-        not initiate this, please reset your password immediately.</p>
 
-      <a href={{link}} class="btn-link">Reset Password</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reset Password</title>
+</head>
 
-      <h3 style="margin-top: 50px;">
-        Didn't request this change?
-      </h3>
-      <p style="margin-bottom: 50px;">
-        If you didn't request a password reset, you can ignore this email.
+<body style="margin: 0; padding: 0; font-family: Arial, sans-serif;">
+  <div style="margin: 0 auto; max-width: 500px; width: 100%; padding: 20px;">
+    <h1 style="color: #333;">{{subject}}</h1>
+    <hr style="border: none; border-top: 1px solid #eee;" />
+
+    <p style="font-size: 16px; color: #333;">Hello {{name}},</p>
+    <p style="font-size: 16px; color: #333;">
+      We received a request to reset your password.<br />
+      If you did not initiate this, please reset your password immediately. <br />
+      This link is valid for 1 hour.
+    </p>
+
+    <a href="{{link}}" style="
+          display: inline-block;
+          padding: 12px 20px;
+          margin-top: 20px;
+          background-color: #007bff;
+          color: #ffffff;
+          text-decoration: none;
+          border-radius: 5px;
+          font-weight: bold;
+        ">
+      Reset Password
+    </a>
+
+    <h3 style="margin-top: 50px; color: #333;">Didn't request this change?</h3>
+    <p style="font-size: 16px; color: #333; margin-bottom: 50px;">
+      If you didn't request a password reset, you can ignore this email.
+      <br />
+      Your password will not be changed.
+    </p>
+
+    <hr style="border: none; border-top: 1px solid #eee;" />
+    <p style="font-size: 16px; color: #333;">Regards,</p>
+    <p style="font-size: 16px; color: #333;"><strong>Auth SM</strong> Team</p>
+
+    <div>
+      <p style="font-size: 13px; color: #999;">
+        If you’re having trouble clicking the "Reset Password" button, copy
+        and paste the URL below into your web browser:
         <br />
-        Your password will not be changed.
+        <a href="{{link}}" style="color: #007bff;">{{link}}</a>
       </p>
-
-      <hr />
-      <p>Regards,</p>
-      <p><b>Auth SM</b> Team</p>
-      <div>
-        <p style="font-size: 0.8rem;">
-          If you’re having trouble clicking the "Reset Password" button, copy
-          and paste the URL below into your web browser:
-          <br />
-          <a href={{link}}>{{link}}</a>
-        </p>
-      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
